--- a/README.adoc
+++ b/README.adoc
@@ -29,7 +29,7 @@ ____
 
 image:https://travis-ci.org/database-rider/database-rider.svg[Build Status (Travis CI), link=https://travis-ci.org/database-rider/database-rider]
 image:https://coveralls.io/repos/database-rider/database-rider/badge.png[Coverage, link=https://coveralls.io/r/database-rider/database-rider]
-image:https://maven-badges.herokuapp.com/maven-central/com.github.database-rider/rider-core/badge.svg["Maven Central",link="http://search.maven.org/#search|ga|1|database-rider"]
+image:https://img.shields.io/maven-central/v/com.github.database-rider/rider-core.svg?label=Maven%20Central["Maven Central",link="https://search.maven.org/search?q=g:com.github.database-rider"]
 
 
 
@@ -174,7 +174,7 @@ This module is the basis for subsequent modules. It contains a JUnit rule (shown
 <dependency>
       <groupId>com.github.database-rider</groupId>
       <artifactId>rider-core</artifactId>
-      <version>1.2.9</version>
+      <version>1.2.11</version>
       <scope>test</scope>
 </dependency>
 ----
@@ -914,7 +914,7 @@ If you use CDI in your tests then you should give a try in Database Rider https:
 <dependency>
     <groupId>com.github.database-rider</groupId>
     <artifactId>rider-cdi</artifactId>
-    <version>1.2.9</version>
+    <version>1.2.11</version>
     <scope>test</scope>
 </dependency>
 ----
@@ -981,7 +981,7 @@ NOTE: If you don't use CDI you need to <<Programmatically creating datasets, cre
 <dependency>
     <groupId>com.github.database-rider</groupId>
     <artifactId>rider-cucumber</artifactId>
-    <version>1.2.9</version>
+    <version>1.2.11</version>
     <scope>test</scope>
 </dependency>
 ----
@@ -1184,7 +1184,7 @@ http://junit.org/junit5/[JUnit 5] is the new version of JUnit and comes with a n
 <dependency>
     <groupId>com.github.database-rider</groupId>
     <artifactId>junit5</artifactId>
-    <version>1.2.9</version>
+    <version>1.2.11</version>
     <scope>test</scope>
 </dependency>
 ----
@@ -1242,7 +1242,7 @@ Add Database Rider Spring extension to your project
 <dependency>
     <groupId>com.github.database-rider</groupId>
     <artifactId>rider-spring</artifactId>
-    <version>1.2.9</version>
+    <version>1.2.11</version>
     <scope>test</scope>
 </dependency>
 ----
