--- a/README.adoc
+++ b/README.adoc
@@ -318,6 +318,7 @@ Here is a dbunit.yml example, also the default values :
 cacheConnection: true
 cacheTableNames: true
 leakHunter: false
+mergeDataSets; false
 caseInsensitiveStrategy: !!com.github.database.rider.core.api.configuration.Orthography 'UPPERCASE' <1>
 properties:
   batchedStatements:  false
@@ -623,6 +624,67 @@ public class MetaDataSetIt {
 NOTE: This works with all Database Rider modules like `Spring`, `CDI` and `JUnit5`.
 
 TIP: See https://github.com/database-rider/database-rider/blob/master/rider-core/src/test/java/com/github/database/rider/core/MetaDataSetIt.java[MetaDatasetIt code^] for details. 
+
+
+=== Merge DataSets
+
+Since `v1.3.0` it is possible to merge @DataSet configuration by declaring the annotation at `class` and `method` level.
+
+To enable the merging use `mergeDataSets=true` in `@DBunit` annotation or in `dbunit.yml` configuration.
+
+IMPORTANT: Only *array properties* such as `value` and  `executeScriptsAfter` from @DataSet will be merged. 
+
+Following is an example of merging:
+
+----
+@RunWith(JUnit4.class)
+@DBUnit(mergeDataSets = true) <1>
+@DataSet(value="yml/tweet.yml", executeScriptsAfter = "addUser.sql", executeStatementsBefore = "INSERT INTO USER VALUES (8,'user8')")
+public class MergeDataSetsIt {
+
+	@Rule
+	public EntityManagerProvider emProvider = EntityManagerProvider.instance("rules-it"); 
+
+	@Rule
+	public DBUnitRule dbUnitRule = DBUnitRule.instance(emProvider.connection()); 
+    
+	
+	@Test
+    @DataSet(value="yml/user.yml", executeScriptsAfter = "tweets.sql", executeStatementsBefore = "INSERT INTO USER VALUES (9,'user9')", strategy = SeedStrategy.INSERT)
+	public void shouldMergeDataSetsFromClassAndMethod() {
+		List<User> users = em().createQuery("select u from User u").getResultList(); //2 users from user.yml plus 1 from  class level 'executeStatementsBefore' and 1 user from method level 'executeStatementsBefore'
+		assertThat(users).isNotNull().isNotEmpty().hasSize(4);
+        
+        User user = (User) em().createQuery("select u from User u where u.id = 9").getSingleResult(); <2>
+        assertThat(user).isNotNull();
+        assertThat(user.getId()).isEqualTo(9);
+        user = (User) em().createQuery("select u from User u where u.id = 1").getSingleResult();
+        
+        assertThat(user.getTweets()).isNotEmpty(); <3>
+        assertThat(user.getTweets().get(0).getContent()).isEqualTo("dbunit rules again!"); 
+	}
+	
+	@AfterClass
+    public static void afterTest() {
+        User user = (User) em().createQuery("select u from User u where u.id = 10").getSingleResult();<4>
+        assertThat(user).isNotNull();
+        assertThat(user.getId()).isEqualTo(10); 
+        
+        Tweet tweet = (Tweet) em().createQuery("select t from Tweet t where t.id = 10").getSingleResult();//scripts after
+        assertThat(tweet).isNotNull();
+        assertThat(tweet.getId()).isEqualTo("10"); 
+    }
+    
+}
+----
+<1> Activates the merging of datasets
+<2> User with id = 8  was inserted by `executeStatementsBefore` from class level dataset.
+<3> tweets comes from `tweet.yml` declared on class level dataset.
+<4> User with id = 10 was inserted by `addUser.sql` from class level dataset.
+
+TIP: Source codeof example above can be https://github.com/database-rider/database-rider/blob/master/rider-core/src/test/java/com/github/database/rider/core/MergeDataSetsIt.java[found here^].
+
+TIP: Junit5 example can be https://github.com/database-rider/database-rider/blob/master/rider-junit5/src/test/java/com/github/database/rider/junit5/MergeDataSetsJUnit5It.java[found here^] and CDI https://github.com/database-rider/database-rider/blob/master/rider-cdi/src/test/java/com/github/database/rider/cdi/MergeDataSetsCDIIt.java[example here^].
 
 === DataSet Replacers
 
