Publishing Database Rider 1.2.12-SNAPSHOT living documentation.

--- a/latest/documentation.adoc
+++ b/latest/documentation.adoc
@@ -1344,3 +1344,72 @@ Test must use dataset declared in `AnotherMetaDataSet` annotation. icon:thumbs-u
 =====
 ****
 
+[[DataSet-merging, DataSet merging]]
+== *DataSet merging*
+
+****
+====
+[quote]
+____
+In order to reuse dataset configuration between test methods
+As a developer
+I want merge `class level` with `test level` dataset configuration
+____
+====
+
+TIP: Complete source code of examples below can be https://github.com/database-rider/database-rider/blob/master/rider-core/src/test/java/com/github/database/rider/core/MergeDataSetsIt.java#L25[found here^].
+
+TIP: See https://github.com/database-rider/database-rider/blob/master/rider-junit5/src/test/java/com/github/database/rider/junit5/MergeDataSetsJUnit5It.java#L20[Rider JUnit5^] and https://github.com/database-rider/database-rider/blob/master/rider-cdi/src/test/java/com/github/database/rider/cdi/MergeDataSetsCDIIt.java#L26[CDI^] examples.
+****
+
+=== Merging datasets
+
+****
+Given ::
+=====
+The following class level dataset configuration icon:thumbs-up[role="green",title="Passed"]
+******
+
+[discrete]
+[source,java,indent=0]
+----
+include::../../../src/test/java/com/github/database/rider/core/MergeDataSetsIt.java[tags=declaration]
+}
+----
+[discrete]
+<1> This enables dataset merging so @DataSet declared on test class will be merged with test/method one. 
+
+
+******
+
+=====
+When ::
+=====
+The following test is executed: icon:thumbs-up[role="green",title="Passed"]
+******
+
+[discrete]
+[source,java,indent=0]
+----
+include::../../../src/test/java/com/github/database/rider/core/MergeDataSetsIt.java[tags=test-method;after-test]
+----
+
+
+******
+
+=====
+Then ::
+=====
+Test and method dataset configuration will be merged in one dataset icon:thumbs-up[role="green",title="Passed"]
+----
+
+IMPORTANT: Only array properties such as `value`and `executeScriptsBefore` of @DataSet will be merged.
+
+WARNING: Class level dataset configuration will come before method level if a property is defined in both datasets, like `executeStatementsBefore` in example above.
+
+TIP: You can enable dataset merging for all tests with 'mergeDataSets=true` on `dbunit.yml` configuraton file.
+
+----
+=====
+****
+
