--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -7,6 +7,8 @@ ifndef::icons[]
 :star: &#9733;
 endif::[]
 
+*This file is not maintained anymore*, see `releases` on github for full changelog of all versions: https://github.com/database-rider/database-rider/releases
+
 Below is an overview of what has changed on each `Database Rider` version.
 
 == https://github.com/database-rider/database-rider/releases/tag/1.2.6[1.2.6 (2018-04-01)^]
