Publishing Database Rider 1.5.1-SNAPSHOT living documentation.

--- a/latest/documentation.adoc
+++ b/latest/documentation.adoc
@@ -10,7 +10,7 @@
 :docinfo:
 :source-highlighter: highlightjs
 :toclevels: 3
-:revnumber: 1.5.0
+:revnumber: 1.5.1-SNAPSHOT
 :hardbreaks:
 :chapter-label: Chapter
 :version-label: Version
